--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,6 +29,7 @@ steps:
 - script: |
     python -m pip install --upgrade pip
     pip install .[dev]
+    pip install pytest-azurepipelines
   displayName: 'Install dependencies'
 
 - script: |
