--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,6 @@ setenv =
 deps =
     .[test]
 commands =
-    pytest --basetemp={envtmpdir}
+    pytest --cov={toxinidir}/psed --basetemp={envtmpdir}
 
 
