Change coverage report.

--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,6 @@ setenv =
 deps =
     .[test]
 commands =
-    pytest --cov={toxinidir}/psed --cov-report html --basetemp={envtmpdir}
+    pytest --cov={toxinidir}/psed --cov-report xml --basetemp={envtmpdir}
 
 
